--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p><address><a href="tel:+92 336 3452248">0336-3452248</a></address><br>
         <address><a href="mailto:connect.hanzala@gmail.com">connect.hanzala@gmail.com</a></address>  
     </p>
-    <img src="E:\Hanzala Folder\My Resume\Images\pic.jpg" width="7%" height="7%"/>
+    <img src="./Images/pic.jpg" width="9%" height="9%"/>
     <hr>
     <h4>Profile</h4>
     <p>
@@ -26,18 +26,18 @@
     <h4>Skills</h4>
     <p>
         <ul>
-            <li>Adobe</li>
+            <li><strong>Adobe</strong></li>
             <ul>
                 <li>Illustrator</li>
                 <li>Photoshop</li>
             </ul>
-            <li>Microsoft</li>
+            <li><strong>Microsoft</strong></li>
             <ul>
                 <li>Excel</li>
                 <li>Word</li>
                 <li>Power Point</li>
             </ul>
-            <li>html</li>
+            <li><strong>html</strong></li>
         </ul>
     </p>
     <h4>Language</h4>
@@ -52,6 +52,5 @@
         8<sup>th</sup><br>
         <em>Currently in 9<sup>th</sup> Grade (in 2022)</em>
     </p>
-
 </body>
 </html>
