Resume in which I used css

--- a/index.html
+++ b/index.html
@@ -5,52 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <link rel="stylesheet" href="Styling/styling.css">
 </head>
 <body>
-    <text align="center"><h1>Resume</h1></text>
-    <hr>
-    <h2>Muhammad Hanzala</h2>
-    <p><address><a href="tel:+92 336 3452248">0336-3452248</a></address><br>
-        <address><a href="mailto:connect.hanzala@gmail.com">connect.hanzala@gmail.com</a></address>  
-    </p>
-    <img src="./Images/pic.jpg" width="9%" height="9%"/>
-    <hr>
-    <h4>Profile</h4>
-    <p>
-        An ambitious problem solver with a passion for 
-        online/offline businesses, and who would like to 
-        join a team of like-minded developers.<br> 
-        have a keen interest in technology and 
-        web/mobile applications, plus user experience.
-    </p>
-    <h4>Skills</h4>
-    <p>
-        <ul>
-            <li><strong>Adobe</strong></li>
-            <ul>
-                <li>Illustrator</li>
-                <li>Photoshop</li>
+    <text align="center" class="heading1"><h1>Resume</h1></text>
+    <hr class="line">
+    <div class="row">
+        <div class="contact">
+            <h2>Muhammad Hanzala</h2>
+            <address>  
+                <a href="tel:+92 336 3452248">0336-3452248</a>
+                <br>
+                <a href="mailto:connect.hanzala@gmail.com">connect.hanzala@gmail.com</a>
+            </address>  
+        </div>
+        <br>
+        <div class="contact">
+            <img src="./Images/pic.jpg" class="pic"/>
+            <br>
+        </div>
+    </div>
+    <hr class="line">
+    <div class="paragraph1">
+        <h3 class="headings">Profile</h3>
+        <p class="p2">
+            An ambitious problem solver with a passion for 
+            online/offline businesses, and who would like to 
+            join a team of like-minded developers.<br> 
+            have a keen interest in technology and 
+            web/mobile applications, plus user experience.
+        </p>
+            <h3 class="headings">Skills</h3>
+            <ul class="p2">
+                <li><strong>Adobe</strong></li>
+                <ul>
+                    <li>Illustrator</li>
+                    <li>Photoshop</li>
+                </ul>
+                <li><strong>Microsoft</strong></li>
+                <ul>
+                    <li>Excel</li>
+                    <li>Word</li>
+                    <li>Power Point</li>
+                </ul>
+                <li><strong>html</strong></li>
             </ul>
-            <li><strong>Microsoft</strong></li>
-            <ul>
-                <li>Excel</li>
-                <li>Word</li>
-                <li>Power Point</li>
-            </ul>
-            <li><strong>html</strong></li>
-        </ul>
-    </p>
-    <h4>Language</h4>
-    <p>
-        <ol>
-            <li>Urdu</li>
-            <li>English (Uk)</li>
-        </ol>
-    </p>
-    <h4>Education</h4>
-    <p>
-        8<sup>th</sup><br>
-        <em>Currently in 9<sup>th</sup> Grade (in 2022)</em>
-    </p>
+        <h3 class="headings">Language</h3>
+            <ol class="p2">
+                <li>Urdu</li>
+                <li>English (Uk)</li>
+            </ol>
+        <h3 class="headings">Education</h3>
+        <p class="p2">
+            8<sup>th</sup><br>
+            <em class="small">Currently in 9<sup>th</sup> Grade (in 2022)</em>
+        </p>
+    </div>
 </body>
 </html>
